[tool.poetry]
name = "no-vpn-4-asn"
version = "0.1.0"
description = ""
authors = ["Nelson Chen <crazysim@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
netaddr = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
